Add myself to AUTHORS
Taking care of it now before I forget again! Closes #27.

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
 Tom Burdick <tom.burdick@electromatic.us>
 Adam Greig <adam@adamgreig.com>
 David Flemström <david.flemstrom@gmail.com>
+Ian McIntyre <ianpmcintyre@gmail.com>
